生成操作中 添加 了对 项目数据(实体/模型)的引用
