# src/Studio/ClientApp/src/app/services/enum/models/gen-source-type.model.ts
@@ -1,5 +1,6 @@
 export enum GenSourceType {
   EntityCLass = 0,
-  OpenAPI = 1,
+  DtoModel = 1,
+  OpenAPI = 2,
 
 }
