# src/Studio/ClientApp/src/app/services/enum/models/solution-type.model.ts
@@ -1,6 +1,6 @@
 export enum SolutionType {
   DotNet = 0,
   Node = 1,
-  Empty = 2,
+  Else = 2,
 
 }
