# src/Studio/ClientApp/src/app/services/gen-action/models/model-file-item-dto.model.ts
@@ -1,0 +1,14 @@
+/**
+ * 模型文件项
+ */
+export interface ModelFileItemDto {
+  /**
+   * 名称
+   */
+  name: string;
+  /**
+   * 路径
+   */
+  fullName: string;
+
+}
